--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "prisma generate && tsx scripts/seed.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
@@ -16,11 +17,14 @@
     "@prisma/client": "6.9.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@vercel/blob": "^1.1.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.513.0",
     "mysql2": "^3.14.1",
     "next": "15.3.3",
@@ -42,6 +46,7 @@
     "eslint-config-next": "15.3.3",
     "prisma": "6.9.0",
     "tailwindcss": "^4",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   },
