--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "primsa genrate && next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "prisma generate && tsx scripts/seed.ts"
+    "seed": "prisma generate && tsx scripts/seed.ts",
+    "postinstall": "prisma generate && next telemetry disable"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
@@ -50,5 +51,13 @@
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   },
-  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@clerk/shared",
+      "@prisma/client",
+      "@prisma/engines",
+      "prisma"
+    ]
+  }
 }
